Fix padding, and row gap for tablet breakpoint

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -30,6 +30,13 @@ body {
   max-width: 1280px;
 }
 
+@media (min-width: 768px) {
+  body {
+    padding: 5rem 1rem;
+    row-gap: 8rem;
+  }
+}
+
 @media (min-width: 1400px) {
   body {
     padding: 5rem 0;
